@@ -1,4 +1,6 @@
 0.9.0: (Future)
+Emulation fixes:
+ - GBA Memory: Misaligned SRAM writes are ignored
 Other fixes:
  - Qt: Only dynamically reset video scale if a game is running
  - Qt: Fix race condition with proxied video events
